// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS V2/App Header V2 Default 1`] = `
<div
  dir="rtl"
>
  <header
    className="MuiPaper-root-11 MuiAppBar-root-0 MuiAppBar-positionStatic-4 MuiAppBar-colorSecondary-8 MuiPaper-elevation4-18"
  >
    <div
      className="headerContainer"
    >
      <h6
        className="MuiTypography-root-39 title MuiTypography-h6-49"
      >
        כותרת
      </h6>
    </div>
  </header>
</div>
`;

exports[`Storyshots COMPONENTS V2/App Header V2 Hamburger 1`] = `
<div
  dir="rtl"
>
  <header
    className="MuiPaper-root-11 MuiAppBar-root-0 MuiAppBar-positionStatic-4 MuiAppBar-colorSecondary-8 MuiPaper-elevation4-18"
  >
    <div
      className="headerContainer"
    >
      <button
        className="MuiButtonBase-root-48 MuiIconButton-root-39"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-47"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root-51 rightButton"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
      </button>
      <h6
        className="MuiTypography-root-60 title MuiTypography-h6-70"
      >
        כותרת
      </h6>
    </div>
  </header>
</div>
`;

exports[`Storyshots COMPONENTS V2/App Header V2 With Back 1`] = `
<div
  dir="rtl"
>
  <header
    className="MuiPaper-root-11 MuiAppBar-root-0 MuiAppBar-positionStatic-4 MuiAppBar-colorSecondary-8 MuiPaper-elevation4-18"
  >
    <div
      className="headerContainer"
    >
      <button
        className="MuiButtonBase-root-48 MuiIconButton-root-39"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-47"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root-51 rightButton"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </span>
      </button>
      <h6
        className="MuiTypography-root-60 title MuiTypography-h6-70"
      >
        כותרת
      </h6>
    </div>
  </header>
</div>
`;
